<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>SpringSecurity</artifactId>

  <build>
    <plugins>
      <!-- Плагін для збірки Spring Boot -->
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>2.22.2</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <!-- Залежність для веб-додатку -->
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <!-- Залежність для роботи з JPA (для бази даних) -->
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <!-- Залежність для Thymeleaf (фронтенд) -->
    <dependency>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <!-- Залежність для H2 бази даних (ін-меморі база даних) -->
    <dependency>
      <artifactId>h2</artifactId>
      <groupId>com.h2database</groupId>
      <scope>runtime</scope>
    </dependency>

    <!-- Залежність для тестування -->
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-oauth2-client
      </artifactId>
      <groupId>org.springframework.boot</groupId> <!-- для авторизації через соцмережі -->
    </dependency>

    <dependency>
      <artifactId>mockito-core</artifactId>
      <groupId>org.mockito</groupId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <artifactId>byte-buddy</artifactId>
      <groupId>net.bytebuddy</groupId>
      <version>1.14.18</version> <!-- Змініть на останню версію -->
    </dependency>


  </dependencies>
  <groupId>com.rect2m</groupId>

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/> <!-- Актуальна версія Spring Boot -->
    <version>3.3.2</version> <!-- Дозволяє використовувати Spring Boot parent -->
  </parent>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <version>1.0-SNAPSHOT</version>
</project>